
/******
ADD A BAT PONY EMOTE, ADD A SOMBRA EMOTE
PLUS DARING DO
*******/

- Blog posts now have an emote panel
- Emotes now have fimfiction style shorthand (Needs completion)
- Automatic emote spoiler replacement on all pages (Thanks, Kits!)
- Performance tweaks reduced run time by 350ms on my machine.

To Do:
- Emote panel in PMs
- Emote panel in new forum threads