@@ -27,38 +27,38 @@ function run() {
 	addEmote("http://i.imgur.com/DmoWN.png", "ajhmmm", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/MdJgU.png", "ajconfused", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/dVnqE.png", "ajcarefree", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/TAf9J.png", "Emote", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/TAf9J.png", "ajconfident", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/gNxjD.png", "ajproud", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/JmYib.png", "ajmad", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/aPZth.png", "ajinnocent", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/4sZY1.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/1NN8f.png", "Emote", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/4sZY1.png", "ajwoozy", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/1NN8f.png", "ajwhat", "AJ", "Applejack", 1);
 	addEmote("http://i.imgur.com/xmRQV.png", "ajskeptical", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/lGb8P.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/0zTKq.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/BeQHk.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/fl6ox.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/mbZjl.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/r19vB.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/hMgvT.png", "Emote", "AJ", "Applejack", 1);
-	addEmote("http://i.imgur.com/ZCoEh.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/1ppRy.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/kjSfI.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/pwUmu.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/geqle.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/LOrxf.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/Evd0x.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/tjCXQ.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/NlvYtnA.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/Qe7TiLt.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/yAmRYea.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/pww1wjm.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/KZHFE8U.png", "Emote", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/lGb8P.png", "ajcurious", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/0zTKq.png", "ajsmirk", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/BeQHk.png", "ajbiggrin", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/fl6ox.png", "ajsad", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/mbZjl.png", "ajmoustache", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/r19vB.png", "ajbashful", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/hMgvT.png", "ajunamused", "AJ", "Applejack", 1);
+	addEmote("http://i.imgur.com/ZCoEh.png", "ajsalute", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/1ppRy.png", "ajglasses", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/kjSfI.png", "ajhazy", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/pwUmu.png", "ajdiscorded", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/geqle.png", "ajghost", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/LOrxf.png", "ajannoyed", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/Evd0x.png", "ajcrazy", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/tjCXQ.png", "ajeww", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/NlvYtnA.png", "ajooh", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/Qe7TiLt.png", "ajwait", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/yAmRYea.png", "ajangry", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/pww1wjm.png", "ajstubborn", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/KZHFE8U.png", "ajno", "AJ", "Applejack", 2);
 	addEmote("http://i.imgur.com/MZsrxQK.png", "Emote", "AJ", "Applejack", 2);
 	addEmote("http://i.imgur.com/aHVIEJf.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/DPk2NZn.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/ogtnDnC.png", "Emote", "AJ", "Applejack", 2);
-	addEmote("http://i.imgur.com/oBAx788.png", "Emote", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/DPk2NZn.png", "ajnotlying", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/ogtnDnC.png", "ajexcited", "AJ", "Applejack", 2);
+	addEmote("http://i.imgur.com/oBAx788.png", "ajwink", "AJ", "Applejack", 2);
 	addEmote("http://i.imgur.com/myOBKB4.png", "Emote", "AJ", "Applejack", 2);
 	addEmote("http://i.imgur.com/LRD2W70.png", "Emote", "AJ", "Applejack", 2);
 	addEmote("http://i.imgur.com/MIrVmT7.png", "Emote", "AJ", "Applejack", 2);
@@ -66,18 +66,18 @@ function run() {
 	addEmote("http://i.imgur.com/6DvjrRv.png", "Emote", "AJ", "Applejack", 2);
 	addEmote("http://i.imgur.com/0REqcvr.png", "Emote", "AJ", "Applejack", 2);
 
-	addEmote("http://i.imgur.com/hCkff.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/FlxUX.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/Mpt2V.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/PKx4m.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/J1YdP.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/iX6uT.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/AUoqx.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/gphLa.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/eAjva.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/H718D.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/ahOjP.png", "Emote", "FS", "Fluttershy", 1);
-	addEmote("http://i.imgur.com/5wxoPUa.png", "Emote", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/hCkff.png", "flutterjerk", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/FlxUX.png", "flutterroll", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/Mpt2V.png", "flutterwhoa", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/PKx4m.png", "flutterfear", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/J1YdP.png", "fluttershy", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/iX6uT.png", "flutterserious", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/AUoqx.png", "fluttershh", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/gphLa.png", "flutteryay", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/eAjva.png", "flutterwink", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/H718D.png", "flutterblush", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/ahOjP.png", "flutterloveme", "FS", "Fluttershy", 1);
+	addEmote("http://i.imgur.com/5wxoPUa.png", "whattheflut", "FS", "Fluttershy", 1);
 	addEmote("http://i.imgur.com/sb2Qbof.png", "Emote", "FS", "Fluttershy", 1);
 	addEmote("http://i.imgur.com/24nRCr5.png", "Emote", "FS", "Fluttershy", 1);
 	addEmote("http://i.imgur.com/AFuKMoD.png", "Emote", "FS", "Fluttershy", 1);
